--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,39 @@
 *.log
 .htaccess
+
 sitemap.xml
 sitemap.xml.gz
+index.php
+license.txt
+readme.html
+wp-activate.php
+wp-blog-header.php
+wp-comments-post.php
 wp-config.php
+wp-cron.php
+wp-links-opml.php
+wp-load.php
+wp.login.php
+wp-mail.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
+
+wp-admin/
+wp-includes/
 wp-content/advanced-cache.php
 wp-content/backup-db/
 wp-content/backups/
 wp-content/blogs.dir/
 wp-content/cache/
+wp-content/plugins/akismet/
+wp-content/plugins/hello.php
+wp-content/plugins/index.php
+wp-content/themes/twentyfifteen/
+wp-content/themes/twentyfourteen/
+wp-content/themes/twentythirteen/
+wp-content/themes/index.php
 wp-content/upgrade/
-wp-content/uploads/
+wp-content/index.php
 wp-content/wp-cache-config.php
