Add config files

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ wp-config.php
 wp-cron.php
 wp-links-opml.php
 wp-load.php
-wp.login.php
+wp-login.php
 wp-mail.php
 wp-settings.php
 wp-signup.php
